<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ucu.edu.uy</groupId>
  <artifactId>Main</artifactId>
  <licenses>
    <license>
      <distribution>GPL</distribution>
      <name>GPL</name>
      <url>https://opensource.org/licenses/GPL-3.0</url>
    </license>
  </licenses>
  <description>Figuri. A JADE base proyect to exchange figurines</description>
  <version>1.0</version>
  <inceptionYear>2022</inceptionYear>
  <developers>
    <developer>
      <name>RafaelRodriguez</name>
      <organization>UCUDAL</organization>
      <email>rafaelrodriguezsanz@gmail.com</email>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>
  <packaging>jar</packaging>
  <properties>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
    <github.global.server>github</github.global.server>
  </properties>
  <repositories>
    <repository>
      <id>tilab</id>
      <url>https://jade.tilab.com/maven/</url>
    </repository>
  </repositories>
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>Central GITHUB Repository</name>
      <url>file://${project.build.directory}/mvn-repo</url>
    </repository>
  </distributionManagement>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/resources/javaFX/fxml</directory>
      </resource>
      <resource>
        <directory>src/main/resources/properties</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.1</version>
        <configuration>
          <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.github</groupId>
        <artifactId>site-maven-plugin</artifactId>
        <version>0.11</version>
        <configuration>
          <message>Release ${project.version}</message> <!-- git commit message -->
          <noJekyll>false</noJekyll> <!-- disable webpage processing -->
          <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
          <branch>refs/heads/release/V${project.version}</branch> <!-- remote branch name -->
          <includes>
            <include>./target/Agent-Installer_*.exe</include>
            <include>./target/Agent.exe</include>
            <include>./target/Agent.jar</include>
            <include>./target/Main.exe</include>
            <include>./target/Main.jar</include>
          </includes>
          <repositoryName>Figuri</repositoryName> <!-- github repo name -->
          <repositoryOwner>RafaelRodriguezSanz</repositoryOwner> <!-- github username  -->
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>site</goal>
            </goals>
            <phase>deploy</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <id>default-jar</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <id>build-Agent</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>ucu.edu.uy.jade.agents.MyAgent</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <appendAssemblyId>false</appendAssemblyId>
              <finalName>Agent</finalName>
            </configuration>
          </execution>
          <execution>
            <id>build-App</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>ucu.edu.uy.App</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <appendAssemblyId>false</appendAssemblyId>
              <finalName>Main</finalName>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>ucu.edu.uy.App</mainClass>
          <options>
            <option>--add-modules</option>
        </options>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.0.2</version>
      </plugin>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>./</directory>
              <includes>
                <include>*.txt</include>
              </includes>
              <followSymlinks>false</followSymlinks>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
      </plugin>
      <plugin>
        <groupId>com.github.adrianboimvaser</groupId>
        <artifactId>postgresql-maven-plugin</artifactId>
        <version>0.2</version>
      </plugin>
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>Main exe</id>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>gui</headerType>
              <jar>target/Main.jar</jar>
              <outfile>target/Main.exe</outfile>
              <errTitle>${project.name}</errTitle>
              <!-- <icon>your/Icon.ico</icon> -->
              <jre>
                <path>${env.JAVA_HOME}/jre</path>
              </jre>

              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>${project.version}</txtFileVersion>
                <fileDescription>${project.description}</fileDescription>
                <copyright>(c) ${project.inceptionYear} UCUDAL</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>${project.version}</txtProductVersion>
                <productName>${project.name}</productName>
                <companyName>UCUDAL</companyName>
                <internalName>Main</internalName>
                <originalFilename>Main.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
          <execution>
            <id>Agent exe</id>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>gui</headerType>
              <jar>target/Agent.jar</jar>
              <outfile>target/Agent.exe</outfile>
              <errTitle>${project.name}</errTitle>
              <!-- <icon>your/Icon.ico</icon> -->
              <jre>
                <path>${env.JAVA_HOME}/jre</path>
              </jre>
              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>${project.version}</txtFileVersion>
                <fileDescription>${project.description}</fileDescription>
                <copyright>(c) ${project.inceptionYear} UCUDAL</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>${project.version}</txtProductVersion>
                <productName>${project.name}</productName>
                <companyName>UCUDAL</companyName>
                <internalName>Agent</internalName>
                <originalFilename>Agent.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.6.2</version>
        <executions>
          <execution>
            <id>Agent installer exe</id>
            <phase>package</phase>
            <goals>
              <goal>package</goal>
            </goals>
            <configuration>
              <name>Agent-Installer</name>
              <version></version>
              <jrePath>${env.JAVA_HOME}/jre</jrePath>
              <generateSetup>true</generateSetup>
              <generateMsi>true</generateMsi>
              <generateMsm>true</generateMsm>
              <generateInstaller>true</generateInstaller>
              <url>https://github.com/RafaelRodriguezSanz/Figuri/</url>
              <mainClass>ucu.edu.uy.Agents.AgenteTest</mainClass>
              <platform>windows</platform>
              <bundleJre>true</bundleJre>
              <!-- <iconFile>src/main/deploy/package/windows/icon.ico</iconFile> -->
              <winconfig>
                <mainClass>ucu.edu.uy.Agents.AgenteTest</mainClass>
                <administratorRequired>true</administratorRequired>
              </winconfig>
            </configuration>
          </execution>
          <execution>
            <id>linux-bundler</id>
            <phase>package</phase>
            <goals>
              <goal>package</goal>
            </goals>
            <configuration>
              <mainClass>ucu.edu.uy.App</mainClass>
              <version />
              <name>Main</name>
              <displayName>Main</displayName>
              <!-- <bundleJre>true</bundleJre> -->
              <customizedJre>true</customizedJre>
              <jrePath>${env.JAVA_HOME}/jre</jrePath>
              <generateInstaller>true</generateInstaller>
              <platform>linux</platform>
              <runnableJar>target/Main.jar</runnableJar>
              <additionalResources>
                <additionalResource>src/main/resources</additionalResource>
                <additionalResource>src/main/resources/javaFX/fxml</additionalResource>
              </additionalResources>
              <linuxConfig>
                <!-- <pngFile>path/to/icon.png</pngFile>
                  <generateAppImage>true|false</generateAppImage> -->
                <generateDeb>true</generateDeb>
              </linuxConfig>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <id>id.package.ant</id>
            <phase>verify</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <move file="${project.build.directory}/Agent-Installer_1.0.exe" tofile="${project.build.directory}/Installers/Agent.exe" />
                <move file="${project.build.directory}/Agent-Installer_1.0.msi" tofile="${project.build.directory}/Installers/Agent.msi" />
                <move file="${project.build.directory}/Main_1.0.deb" tofile="${project.build.directory}/Installers/Main.deb" />
                <move file="${project.build.directory}/Main_1.0.rpm" tofile="${project.build.directory}/Installers/Main.rpm" />
                <move file="${project.build.directory}/Agent.jar" tofile="${project.build.directory}/Executables/Agent.jar" />
                <move file="${project.build.directory}/Main.jar" tofile="${project.build.directory}/Executables/Main.jar" />
                <!-- <delete file="${project.build.directory}/Agent-Installer-1.0-runnable.jar"/> -->
                <delete file="${project.build.directory}/Agent-Installer_1.0.msm" />
                <delete file="${project.build.directory}/Main_1.0.changes" />
                <delete file="${project.build.directory}/Main_1.0.exe" />
                <delete file="${project.build.directory}/Main.exe" />
                <delete file="${project.build.directory}/Agent.exe" />
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>jade-main</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.3.2</version>
            <configuration>
              <mainClass>jade.Boot</mainClass>
              <arguments>
                <argument>-conf</argument>
                <argument>src/main/resources/jade-main-container.properties</argument>
              </arguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>jade-agent</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.3.2</version>
            <configuration>
              <mainClass>jade.Boot</mainClass>
              <arguments>
                <argument>-conf</argument>
                <argument>src/main/resources/jade-agent-container.properties</argument>
              </arguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <dependencies>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.4.1</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.tilab.jade</groupId>
      <artifactId>jade</artifactId>
    </dependency>
    <dependency>
      <groupId>com.tilab.jade</groupId>
      <artifactId>jade-test-suite</artifactId>
      <version>1.12.0</version>
    </dependency>
    <dependency>
      <groupId>com.sun</groupId>
      <artifactId>tools</artifactId>
      <version>1.8.0</version>
      <scope>system</scope>
      <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>com.sun.tools</groupId>
      <artifactId>tools</artifactId>
      <version>1.0</version>
    </dependency>
    <!-- <dependency>
            <groupId>org.activecomponents.jadex</groupId>
            <artifactId>jadex-distribution-minimal</artifactId>
            <version>4.0.241</version>
        </dependency> -->
    <!-- <dependency>
            <groupId>org.activecomponents.jadex</groupId>
            <artifactId>jadex-applications-bdiv3</artifactId>
            <version>4.0.267</version>
        </dependency> -->
    <dependency>
      <groupId>javafx</groupId>
      <artifactId>javafx</artifactId>
      <version>2.2</version>
      <scope>system</scope>
      <systemPath>${env.JAVA_HOME}/jre/lib/ext/jfxrt.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>12</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>12</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics </artifactId>
      <version>12</version>
      <classifier>win</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>12</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>12</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>12</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>12</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.24</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.tirasa.connid</groupId>
      <artifactId>connector-framework-internal</artifactId>
      <version>1.5.1.0</version>
  </dependency>  
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.tilab.jade</groupId>
        <artifactId>jade</artifactId>
        <version>4.5.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>